tests/compile_fail/attribute_not_set.stderr
error: Value not set for `a`.
 --> tests/compile_fail/attribute_not_set.rs:6:5
  |
6 |     Variant1,
  |     ^^^^^^^^
